--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pdc-cli",
-  "version": "0.0.20",
+  "version": "0.0.21",
   "description": "this project to init some folder,help you create new folder.",
   "main": "bin/index.js",
   "scripts": {
@@ -23,7 +23,6 @@
     "commander": "^2.12.2",
     "download": "^6.2.5",
     "progress": "^2.0.0",
-    "tar": "^4.1.1",
-    "tar-stream": "^1.5.5"
+    "tar": "^4.1.1"
   }
 }
