--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pda",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "this project to init some folder,help you create new folder.",
   "main": "bin/index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://git.pandatv.com/xuezhiwen/pda.git"
+    "url": "https://github.com/channg/pda"
   },
   "keywords": [
     "pda"
