--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "this project to init some folder,help you create new folder.",
   "main": "bin/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "pda --version"
   },
   "repository": {
     "type": "git",
