--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coir",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "this project to init some folder,help you create new folder.",
   "main": "bin/index.js",
   "scripts": {
@@ -24,6 +24,7 @@
     "commander": "^2.12.2",
     "download": "^6.2.5",
     "fs-extra": "^5.0.0",
+    "inquirer": "^6.0.0",
     "progress": "^2.0.0",
     "q": "^1.5.1",
     "tar": "^4.1.1",
