--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "coir",
   "version": "2.0.0",
   "description": "this project to init some folder,help you create new folder.",
-  "main": "bin/index.js",
+  "main": "src/bin.js",
   "scripts": {
     "test": "node bin/index --version",
     "inquire": "node src/process"
