--- a/package.json
+++ b/package.json
@@ -20,15 +20,11 @@
     "coir": "./bin/index.js"
   },
   "dependencies": {
-    "ansi-escapes": "^3.0.0",
     "colors": "^1.1.2",
     "commander": "^2.12.2",
     "download": "^6.2.5",
     "fs-extra": "^5.0.0",
     "inquirer": "^6.0.0",
-    "progress": "^2.0.0",
-    "q": "^1.5.1",
-    "tar": "^4.1.1",
-    "which": "^1.3.0"
+    "tar": "^4.1.1"
   }
 }
