--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "this project to init some folder,help you create new folder.",
   "main": "src/bin.js",
   "scripts": {
-    "test": "node bin/index --version",
+    "test": "node src/bin --version",
     "inquire": "node src/process"
   },
   "repository": {
