--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "download": "^6.2.5",
     "fs-extra": "^5.0.0",
     "inquirer": "^6.0.0",
+    "left-pad": "^1.3.0",
     "tar": "^4.1.1"
   }
 }
