--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ node_js:
   - "7"
   - "8"
 script:
-  node ./src/bin i test -c test
+  - node ./src/bin i test -r test
+  - node ./src/bin i test -s
+  - node ./src/bin i test -c test
