--- a/.coirrc
+++ b/.coirrc
@@ -1,1 +1,1 @@
-{"lulu":{"1":["notnot","100"],"2":"0","3":"1","100":"1123123","200":"jdfkjkljksd","300":"测试中文\n\n测试😈\n\n看起来可以  不知道能否显示\n"}}
+{"test":{"1":["notnot","100"],"2":"1","3":"1","100":"1123123","200":"jdfkjkljksd","300":"test 中文\ntest ??\n"},"testnext":{"1":["notnot","100"],"2":"1","3":"1","100":"1123123","200":"jdfkjkljksd","300":"test 中文\ntest ??\n"}}
