--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,4 @@ node_js:
   - "8"
 script:
   - node ./src/bin i test -r test
-  - node ./src/bin i test -s
-  - node ./src/bin i test -c test
+  - node ./src/bin i test -r testn -c test
