--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ node_js:
   - "7"
   - "8"
 script:
-  - node ./src/bin i test -c test
-  - node ./src/bin i test -r testn -c test
+  - node ./bin/bin i test -c test
+  - node ./bin/bin i test -r testn -c test
